cargo-features = ["codegen-backend"]

[package]
name = "pittacia"
version = "0.1.0"
edition = "2021"

include = ["data/labels.json"]

[dependencies]
argh = "0.1.12"
dialoguer = "0.11.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[profile.dev]
codegen-backend = "cranelift"
